--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,5 +3,7 @@ name = "mod_exp"
 version = "0.1.0"
 authors = ["Paul Woolcock <paul@woolcock.us>"]
 
-[dependencies]
-num = "*"
+[dependencies.num]
+version = "*"
+features = []
+default-features = false
