--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,9 @@
 name = "mod_exp"
 version = "0.1.0"
 authors = ["Paul Woolcock <paul@woolcock.us>"]
+repository = "https://github.com/pwoolcoc/mod_exp-rs"
+homepage = "https://github.com/pwoolcoc/mod_exp-rs"
+license = "MIT"
 
 [dependencies.num]
 version = "*"
